# json-editor

./: .gitignore  AGENTS.md  Makefile  PKGBUILD  README.md  pyproject.toml  requirements.txt  setup.py
.gitea/workflows/: package.yaml  quality.yaml
.github/workflows/: package.yaml  quality.yaml
assets/: json-editor.desktop
docs/: checklist.md  layout.md  learnings.md  plan.md  requirements.md
src/editor/: main.py
src/editor/json/: loader.py  saver.py
src/editor/ui/: dialogs.py  header_bar.py  pretty_view.py  property_inspector.py  status_bar.py  tree_view.py  window.py
src/editor/ui/styles/: json-editor-dark.xml  json-editor-light.xml  tree-view.css
tests/: test.json  test_about_dialog.py  test_context_menu.py  test_header_bar.py  test_loader.py  test_logger.py  test_saver.py  test_tree_view.py
